--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "start": "npm run start:server",
     "start:server": "nodemon index.js",
     "start:client": "react-scripts start",
     "build": "react-scripts build",
